# dit

./: README.md  pyproject.toml
src/dit/: __init__.py
