[project]
name = "dit"
version = "0.1.0"
description = "An implementation of Diffusion Transformer (DiT) from Scalable Diffusion Models with Transformers (Peebles et al., 2022)."
readme = "README.md"
authors = [
    { name = "flawley", email = "flawley@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "flax>=0.10.2",
    "jax>=0.9.2",
    "numpy>=2.4.4",
]

[project.scripts]
dit = "dit:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 160

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.9",
]
